2010-12-17

	* src/compose.c
	  src/mimeview.c: changed the label 'MIME type' to 'Data type' for
	  understandability.

2010-12-17

	* libsylph/html.c: html_parse_tag(): look at every attribute in 'a'
	  tag for 'href' (thanks to Rich Coe).

2010-12-15

	* src/summaryview.c: summary_toggle_view(): mark as read when message
	  view is toggled on.

2010-12-14

	* libsylph/folder.[ch]
	  src/mainwindow.c: disconnect all current sessions of remote folders
	  when going offline.

2010-12-14

	* src/summaryview.c: reverted the behavior when 'Always open messages
	  in summary when selected' is off (don't display a message when
	  opening a folder).

2010-12-09

	* version 3.1.0beta5

2010-12-09

	* src/send_message.c: send_message_smtp(): fixed a bug that
	  temporary password was not cleared on auth failure.

2010-12-09

	* src/plugin.h: fixed typo.
	* src/update_check.c: update_check(): win32: fixed crash on update
	  check.
	* configure.in: enable updatecheckplugin only if updatecheck is
	  enabled.

2010-12-08

	* version 3.1.0beta4

2010-12-08

	* libsylph/socks.c: win32: fixed compilation error.

2010-12-07

	* libsylph/prefs_account.[ch]
	  src/prefs_account_dialog.c: added UI for SOCKS settings.
	* libsylph/session.c: session_connect_full(): check if
	  socks_info->proxy_host is set.
	* libsylph/imap.c: added SOCKS proxy support.
	* manual/ja/sylpheed.sgml: added SOCKS proxy description.

2010-12-07

	* libsylph/prefs_account.[ch]
	  libsylph/socks.[ch]
	  libsylph/session.[ch]
	  src/inc.c
	  src/send_message.c: added SOCKS4/5 proxy support.

2010-12-03

	* nsis/*: added NSIS installer script files.

2010-12-01

	* libsylph/prefs_common.[ch]
	  src/summaryview.c
	  src/prefs_common_dialog.c: added an option 'Always mark as read when
	  a message is opened'. This will bring back the previous behavior.

2010-11-25

	* src/main.c
	  src/setup.h: win32: added missing code for WAB file import.

2010-11-18

	* manual/ja/sylpheed.sgml: updated to 3.1.

2010-11-16
