@@ -1,3 +1,13 @@
+2010-12-20
+
+	* libsylph/prefs_common.[ch]
+	  src/compose.[ch]
+	  src/addressbook.c
+	  src/addr_compl.c
+	  src/prefs_common_dialog.c: added new option: "Set only mail address
+	  when composing from address book".
+	* src/importldif.c: fixed uninitialized variable.
+
 2010-12-17
 
 	* src/compose.c
